# OUI-Visualization

./: .gitignore  LICENSE  Legacy.md  README.md  build_exe.spec  pyproject.toml
assets/knn/: iris_2d.txt
dseparacija/: d_separation_practice.py  readme.txt
dseparacija/windows/: d_separation_practice_windows.py  d_separation_windows.py
knn/: knn.py
legacy/: README.md
legacy/AO/: AO.py
legacy/abrezanje/: alpha_beta.py
legacy/dseparacija/: d_separation.py  d_separation_practice.py
legacy/dseparacija/windows/: d_separation_practice_windows.py  d_separation_windows.py
legacy/knn/: knn.py
legacy/nomogram/: nomogram.ipynb  ucna_mnozica.csv
legacy/planiranje/koncna_naloga_2.0/: main.py  models.py
legacy/razporejanje/: lst.py
legacy/rezanje/: prunetree.py
nomogram/: data.csv  run.sh  ucna_mnozica.csv
planiranje/koncna_naloga_2.0/: models.py
razporejanje/: lst.py
rezanje/: prunetree.py
src/: main.py
src/common/: app.py  module.py
src/common/widgets/: __init__.py  movable_canvas.py
src/modules/: main_menu.py  module1.py
src/modules/ab_pruning/: README.md  ab_pruning.py  ab_simulator.py  module.py
src/modules/ao_star/: ao_star.py  examples.py  module.py
src/modules/d_separation/: README.md  d_separation.py  module.py
src/modules/knn/: README.md  module.py
src/modules/lst_scheduling/: README.md  lst.py  module.py
src/modules/naive_bayes/: README.md  module.py
src/modules/nomogram/: README.md  module.py  nomogram.py
