[project]
name = "oui-visualization"
version = "0.1.0"
authors = [{ name = "Mark D. Longar", email = "mark.longar@gmail.com" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
main = "src.main:main"

[project.optional-dependencies]
legacy = [
    "graphviz>=0.20.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.3",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pygame>=2.6.1",
    "scikit-learn>=1.5.2",
]

[dependency-groups]
dev = ["ruff>=0.8.1"]
