[project]
name = "oui-visualization"
version = "0.1.0"
authors = [{ name = "Mark D. Longar", email = "mark.longar@gmail.com" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.1",
    "scikit-learn>=1.6.0",
    "sv-ttk>=2.6.0",
]

[project.optional-dependencies]
legacy = [
    "graphviz>=0.20.3",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = ["ruff>=0.8.1"]

[tool.ruff]
line-length = 120
indent-width = 4
